--- a/static/css/style46.css
+++ b/static/css/style46.css
@@ -25,16 +25,96 @@ body {
   height: 100vh;
 }
 
-#headerDiv {
+/* #headerDiv {
   display: flex;
   justify-content: space-between;
   align-items: center;
+} */
+
+.headerDiv {
+  display: flex;
+  justify-content: flex-end;
+  /* Sağa hizala */
+  gap: 10px;
+  margin-top: 5px;
+  /* Div'ler arası boşluk */
+}
+
+.headerBox {
+  padding: 8px 5px 0 5px;
+  /* background: #007bff;
+  color: white; */
+  border-radius: 5px;
+}
+
+.left-headerBox {
+  flex-grow: 1;
+  /* Kalan boşluğu doldurur */
+  padding: 5px 20px 0 20px;
+  /* background-color: #f0ad4e;
+  color: white; */
+  border-radius: 5px;
+}
+
+/* CSS for Avatar Dropdown Menu */
+.avatar-dropdown-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  width: 200px;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-10px);
+  transition: opacity 0.3s ease, transform 0.3s ease, visibility 0s 0.3s;
+  z-index: 10; /* Dropdown menüsünü üstte göstermek için */
+}
+
+.avatar-dropdown-menu.show {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.avatar-container {
+  position: relative;
+  margin: 5px 10px 0 0;
+  cursor: pointer;
+}
+
+.avatar-dropdown-item {
+  display: block;
+  padding: 10px;
+  color: #333;
+  text-decoration: none;
+  border-bottom: 1px solid #ddd;
+}
+
+.avatar-dropdown-item:hover {
+  background-color: #f0f0f0;
 }
 
 .logout-button {
+  display: block;
+  padding: 10px;
+  color: red;
+  text-decoration: none;
+}
+
+.logout-button:hover {
+  background-color: #f0f0f0;
+}
+
+.logout-button2 {
   /* display: inline-block; */
   margin: 0 5px 0 0;
-  padding: 5px 30px;
+  padding: 5px 20px;
   background-color: #B21807;
   color: white;
   text-decoration: none;
@@ -43,8 +123,21 @@ body {
   transition: background 0.3s;
 }
 
-.logout-button:hover {
+.logout-button2:hover {
   background: #901306;
+}
+
+.user-icon {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.user-icon img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-right: 10px;
 }
 
 .column_left {
@@ -1098,8 +1191,9 @@ button#copy-button:hover {
 
 button#bottom-copy-button {
   position: fixed;
+  z-index: 5;
   width: 50px;
-  top: 90px;
+  top: 100px;
   right: 30px;
   padding: 5px 10px;
   background-color: #04AA6D;
