--- a/templates/index_flask_47.html
+++ b/templates/index_flask_47.html
@@ -7,7 +7,7 @@
 
   <title>Eksper_taslak</title>
 
-  <link rel="stylesheet" href="/static/css/style46.css" />
+  <link rel="stylesheet" href="/static/css/style47.css" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -3559,25 +3559,12 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="/static/js/script46.js"></script>
+  <script src="/static/js/script47.js"></script>
+  <script> sessionStorage.setItem("username", "{{ username }}"); </script>
+   
 </body>
 
 </html>
 
 
 
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Avatar İkonu</title>
-</head>
-
-<body>
-  <!-- Nötr bir avatar ikonu -->
-  <i class="fas fa-user-circle" style="font-size: 50px; color: gray;"></i>
-</body>
-
-</html>
