--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -78,6 +78,9 @@
               Çıkış Yap
             </a>
           </div>
+        <div class="mt-4">
+            <a href="javascript:void(0);" class="btn btn-secondary" onclick="goBack()">Geri Dön</a>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -108,6 +111,12 @@
             alert("Beklenmeyen bir hata oluştu.");
           });
         }
+
+
+        function goBack() {
+            window.history.back();  // Tarayıcı geçmişine dön
+        }
+        
       </script>
       
 </body>
